--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   ],
   "dependencies": {
-    "socket.io-client": "~0.9.16"
+    "socket.io-client": "~0.9.16",
+    "test": "~0.6.0"
   }
 }
