--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "socket.io-client": "~0.9.16",
-    "test": "~0.6.0"
+    "test": "~0.6.0",
+    "nodeunit": "~0.8.2"
   }
 }
